--- a/content/css/index.css
+++ b/content/css/index.css
@@ -32,6 +32,9 @@ body {
 .profile-box-desc {
     row-gap: 5px;
 }
+.user-name, .user-number {
+    color: var(--gray);
+}
 /* ---------------------------------- main ---------------------------------- */
 .main {
     
