--- a/content/css/index.css
+++ b/content/css/index.css
@@ -7,17 +7,18 @@ body {
     display: flex;
     flex-direction: row-reverse;
     min-height: 100vh;
-    height: 100vh;
+    height: auto;
+    column-gap: 20px;
 }
 /* -------------------------------- left side ------------------------------- */
 .left-side {
-    width: 330px;
+    width: 500px;
     display: flex;
     flex-direction: column;
 }
 .profile-box {
     direction: rtl;
-    background: var(--white-50);
+    background-color: var(--white-50);
     padding: 15px 20px;
     border-radius: 25px;
     column-gap: 20px;
@@ -27,7 +28,7 @@ body {
     width: 65px;
     height: 65px;
     padding: 6px;
-    background: var(--gold-400);
+    background-color: var(--gold-400);
     border-radius: 50%;
 }
 .user-profile {
@@ -61,7 +62,7 @@ body {
     display: -webkit-box;
     display: -ms-flexbox;
     display: flex;
-    background: var(--gold-50);
+    background-color: var(--gold-50);
     margin: 25px 0;
 }
 .radialProgressBar .overlay {
@@ -69,7 +70,7 @@ body {
     width: 85%;
     height: 85%;
     margin: auto;
-    background: var(--gold-50);
+    background-color: var(--gold-50);
     display: flex;
     color: #00A3FF;
     align-items: center;
@@ -81,8 +82,6 @@ body {
 .charge-btn {
     background-color: var(--gold-400);
     width: 150px;
-    outline: none;
-    border: none;
     border-radius: 5px;
     color: var(--white-50);
     font-size: 1rem;
@@ -105,7 +104,7 @@ body {
     font-size: 1.4rem;
     width: 40px;
     height: 40px;
-    background: rgba(253, 199, 23, 0.2);
+    background-color: rgba(253, 199, 23, 0.2);
     border-radius: 12px;
     color: var(--gold-400);
 }
@@ -131,9 +130,47 @@ body {
 }
 /* ---------------------------------- main ---------------------------------- */
 .main {
-    
+    width: 100%;
+}
+.main-title {
+    font-size: 1.4rem;
+}
+.main-overlay {
+    position: relative;
+    isolation: isolate;
+    width: 100%;
+    height: 150px;
+    margin-top: 20px;
+    border-radius: 20px;
+    background-image: url(../img/overlay.jpg);
+    background-position: center;
+    background-size: cover;
+    background-repeat: no-repeat;
+    overflow: hidden;
+    align-items: flex-end;
+    justify-content: end;
+    image-rendering: pixelated;
+}
+.main-overlay::before {
+    content: '';
+    position: absolute;
+    background: linear-gradient(270deg, rgba(253, 200, 22, 0.4), rgba(255, 223, 114, 0.4));
+    z-index: -1;
+    width: 100%;
+    height: 100%;
+}
+.main-overlay h1 {
+    font-size: 1.5rem;
+    margin-left: 30px;
+}
+.main-overlay button {
+    margin: 20px 0 20px 30px;
+    background-color: var(--gold-400);
+    color: var(--white-50);
+    border-radius: 3px;
+    font-size: 1rem;
 }
 /* --------------------------------- sidebar -------------------------------- */
 .sidebar {
-    
+    width: 500px;
 }
