create a recommend packets table

--- a/content/css/custom.css
+++ b/content/css/custom.css
@@ -8,7 +8,8 @@
 :root {
     --white-50: #FFFFFF;
     --white-100: #f6f6f6;
-    
+    --white-200: #EBEBEB;
+
     --gold-400: #FDC816;
     --gold-50: #FFFCEF;
     
