--- a/content/css/index.css
+++ b/content/css/index.css
@@ -6,8 +6,8 @@ body {
     direction: rtl;
     display: flex;
     flex-direction: row-reverse;
-    min-height: 100vh;
-    height: auto;
+    /* min-height: 100vh; */
+    /* height: 100vh; */
     column-gap: 20px;
 }
 /* -------------------------------- left side ------------------------------- */
@@ -132,7 +132,7 @@ body {
     width: 100%;
 }
 .main-title {
-    font-size: 1.4rem;
+    font-size: 1.6rem;
 }
 .main-overlay {
     position: relative;
@@ -180,6 +180,42 @@ body {
     top: 20px;
     right: 20px;
     font-size: 1.3rem;
+}
+.recommend-packets {
+    background-color: var(--white-50);
+    border-radius: 20px;
+    margin-top: 25px;
+    padding: 30px;
+}
+.recommend-packets-title {
+    font-size: 1.3rem;
+}
+.recommend-packets-table {
+    margin-top: 20px;
+    width: 100%;
+    color: var(--gray-650);
+    outline: 3px solid var(--white-200);
+    border-radius: 10px;
+}
+.recommend-packets-table tr {
+    text-align: center;
+}
+.recommend-packets-table tr:not(:first-child) {
+    border-top: 3px solid var(--white-200);
+}
+.recommend-packets-table th {
+    padding: 20px;
+}
+.recommend-packets-table td {
+    padding: 20px;
+}
+.buy-packet-btn {
+    background-color: var(--gold-400);
+    font-size: 1rem;
+    padding: 5px 30px;
+    border-radius: 10px;
+    color: var(--white-50);
+    box-shadow: 0 0 10px var(--gold-400);
 }
 /* --------------------------------- sidebar -------------------------------- */
 .sidebar {
