--- a/content/css/index.css
+++ b/content/css/index.css
@@ -11,7 +11,7 @@ body {
 }
 /* -------------------------------- left side ------------------------------- */
 .left-side {
-    padding: 20px 0;
+    padding: 20px 0 20px 20px;
     width: 500px;
     display: flex;
     flex-direction: column;
